avoid scrollbars

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,6 +14,8 @@ body {
     font-family: 'Lato';
     height:725px;
     width: 998px;
+    /* avoid scrollbars */
+    overflow: hidden;
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 
